--- a/app/src/main/res/layout/device_row.xml
+++ b/app/src/main/res/layout/device_row.xml
@@ -10,32 +10,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dp"
-        android:background="@color/monsoon"
-        android:padding="3dp">
+        android:layout_marginRight="5dp">
 
         <ImageView
             android:id="@+id/list_image"
             android:layout_width="50dip"
             android:layout_height="50dip"
-            android:src="@drawable/green_flame" />
+            android:src="@drawable/green_circle" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/deviceTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/thumbnail"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@id/thumbnail"
         android:text=""
         android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/deviceTitle"
-        android:layout_marginTop="1dip"
-        android:layout_toRightOf="@id/thumbnail"
-        android:text="" />
 </RelativeLayout>
