--- a/app/src/main/res/layout/device_row.xml
+++ b/app/src/main/res/layout/device_row.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:focusable="false"
     android:orientation="horizontal"
     android:padding="5dip">
 
@@ -10,12 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="5dp">
+        android:layout_marginRight="5dp"
+        android:focusable="false">
 
         <ImageView
             android:id="@+id/list_image"
             android:layout_width="50dip"
             android:layout_height="50dip"
+            android:focusable="false"
             android:src="@drawable/green_circle" />
     </LinearLayout>
 
@@ -25,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/thumbnail"
+        android:focusable="false"
         android:text=""
         android:textSize="18sp" />
 </RelativeLayout>
