--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -22,7 +22,9 @@
     <FrameLayout
         android:id="@+id/flameImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></FrameLayout>
+        android:layout_height="wrap_content">
+
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/deviceList"
