--- a/app/src/main/res/layout/device_row.xml
+++ b/app/src/main/res/layout/device_row.xml
@@ -2,6 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:clickable="false"
+    android:descendantFocusability="blocksDescendants"
     android:focusable="false"
     android:orientation="horizontal"
     android:padding="5dip">
@@ -12,13 +14,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_marginRight="5dp"
-        android:focusable="false">
+        android:descendantFocusability="blocksDescendants">
 
         <ImageView
             android:id="@+id/list_image"
             android:layout_width="50dip"
             android:layout_height="50dip"
+            android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
             android:src="@drawable/green_circle" />
     </LinearLayout>
 
@@ -28,7 +32,9 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/thumbnail"
+        android:clickable="false"
         android:focusable="false"
+        android:focusableInTouchMode="false"
         android:text=""
         android:textSize="18sp" />
 </RelativeLayout>
