Changed expandable list to regular list. Fits what we need better and is easier to implement

--- a/app/src/main/res/layout/fragment_device_list.xml
+++ b/app/src/main/res/layout/fragment_device_list.xml
@@ -5,15 +5,25 @@
     android:layout_height="match_parent"
     tools:context="com.v4.nate.smokedetect.DeviceListFragment">
 
-    <ExpandableListView
-        android:id="@+id/device_list"
+    <!--<ExpandableListView-->
+    <!--android:id="@+id/device_list"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="fill_parent"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:groupIndicator="@null">-->
+
+    <!--</ExpandableListView>-->
+
+    <ListView
+        android:id="@+id/device_list_2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:groupIndicator="@null">
 
-    </ExpandableListView>
+    </ListView>
 
 
 </android.support.constraint.ConstraintLayout>
