Removed devicelist fragment and combined it into the flame fragment

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -20,18 +20,10 @@
     </ListView>
 
     <FrameLayout
-        android:id="@+id/flameImage"
+        android:id="@+id/landing_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/deviceList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="300dp">
-
-    </FrameLayout>
 
 </android.support.v4.widget.DrawerLayout>
