Change the fragment view based on which device is clicked

--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -6,6 +6,7 @@
     tools:context="com.v4.nate.smokedetect.DeviceInfoFragment">
 
     <RelativeLayout
+        android:id="@+id/rel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
