--- a/app/src/main/res/drawable/login_button_outline.xml
+++ b/app/src/main/res/drawable/login_button_outline.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="5dp" />
-            <solid android:color="@color/color_primary" />
-
+            <corners android:radius="25dp" />
+            <solid android:color="@android:color/transparent" />
+            <stroke android:width="2dp" android:color="@color/color_accent" />
         </shape>
 
     </item>
