--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,11 +34,19 @@
         <item name="android:textColorHint">@color/color_text</item>
     </style>
 
-    <style name="Smoldr.LaunchButton">
-        <item name="android:layout_height">40dp</item>
+    <style name="Smoldr.LaunchButtonOutline">
+        <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:background">@drawable/login_button</item>
-        <item name="android:textColor">@color/color_background</item>
+        <item name="android:background">@drawable/login_button_outline</item>
+        <item name="android:textColor">@color/color_accent</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Smoldr.LaunchButtonFull">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:background">@drawable/login_button_full</item>
+        <item name="android:textColor">@color/color_accent</item>
         <item name="android:textSize">16sp</item>
     </style>
 
