--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,19 +5,10 @@
     android:layout_weight="1">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/background2">
-
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/gradient">
     </ImageView>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.7"
-        android:scaleType="centerCrop"
-        android:src="@android:color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
