--- a/app/src/main/res/layout/group_heading.xml
+++ b/app/src/main/res/layout/group_heading.xml
@@ -9,7 +9,9 @@
         android:id="@+id/heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="10sp"
         android:paddingLeft="35sp"
+        android:paddingTop="10sp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 </LinearLayout>
