Date names are human-readable

--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:background="@color/color_primary_dark"
+        android:background="@color/color_accent"
         android:orientation="vertical">
 
         <ExpandableListView
