--- a/app/src/main/res/layout/child_row.xml
+++ b/app/src/main/res/layout/child_row.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/sequence"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -15,10 +15,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/childItem"
+        android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/sequence"
+        android:paddingRight="35sp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 </RelativeLayout>
