--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.v4.nate.smokedetect.LandingFragment">
+
 
     <ImageButton
         android:id="@+id/landingButton"
@@ -32,7 +35,8 @@
         android:layout_below="@id/detectorStatus"
         android:layout_centerInParent="true"
         android:layout_marginRight="56dp"
-        android:text="Hush Alarm" />
+        android:text="Hush Alarm"
+        android:visibility="gone" />
 
     <ListView
         android:id="@+id/device_list"
@@ -43,4 +47,21 @@
         android:groupIndicator="@null">
 
     </ListView>
+
+    <FrameLayout
+        android:id="@+id/progressBarHolder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="1"
+        android:animateLayoutChanges="true"
+        android:background="#FFFFFF"
+        android:visibility="gone">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+    </FrameLayout>
 </RelativeLayout>
