--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -12,11 +12,23 @@
         android:background="@color/color_accent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/imageHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:background="@drawable/test_circle"
+            android:gravity="center"
+            android:text="TEST"
+            android:textColor="@color/color_primary"
+            android:textSize="24dp" />
+
         <ExpandableListView
             android:id="@+id/myList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ExpandableListView>
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageHeading"></ExpandableListView>
 
         <Button
             android:id="@+id/btn_changeName"
