--- a/app/src/main/res/layout/device_history_list_row.xml
+++ b/app/src/main/res/layout/device_history_list_row.xml
@@ -13,11 +13,9 @@
         android:id="@+id/headingImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="10sp"
+        android:layout_centerVertical="true"
         android:paddingLeft="5sp"
-        android:paddingRight="5dp"
-        android:paddingTop="3sp"
-        android:src="@drawable/ic_exclamation_mark" />
+        android:paddingRight="5dp" />
 
 
     <TextView
