--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -12,6 +12,7 @@
         android:background="@color/color_accent"
         android:orientation="vertical">
 
+
         <TextView
             android:id="@+id/imageHeading"
             android:layout_width="wrap_content"
@@ -24,29 +25,107 @@
             android:textColor="@color/color_primary"
             android:textSize="24dp" />
 
+        <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:layout_below="@+id/imageHeading"-->
+        <!--android:background="@color/monsoon" />-->
+
+        <LinearLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@id/imageHeading"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.33"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Battery"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/shaded_square"
+                    android:gravity="center"
+                    android:text="Low"
+                    android:textColor="@color/color_jet"
+                    android:textSize="24dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.33"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Last Test"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/shaded_square"
+                    android:gravity="center"
+                    android:text="11/28"
+                    android:textColor="@color/color_jet"
+                    android:textSize="24dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.33"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Location"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/shaded_square"
+                    android:gravity="center"
+                    android:text="Kitchen"
+                    android:textColor="@color/color_jet"
+                    android:textSize="24dp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
         <ListView
             android:id="@+id/deviceHistoryList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imageHeading">
+            android:layout_below="@id/tabs">
 
         </ListView>
 
-        <Button
-            android:id="@+id/btn_changeName"
-            style="@style/Smoldr.LaunchButtonFull"
-            android:layout_below="@+id/deviceHistoryList"
-            android:padding="10sp"
-            android:text="Change Name" />
-
-
-        <ListView
-            android:id="@+id/status"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_changeName">
-
-        </ListView>
 
     </RelativeLayout>
 
