--- a/app/src/main/res/layout/device_history_list_row.xml
+++ b/app/src/main/res/layout/device_history_list_row.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:paddingLeft="10sp"
-        android:paddingRight="10dp" />
+        android:paddingRight="10dp"
+        android:tint="@color/color_wine" />
 
 
     <TextView
@@ -40,6 +41,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:text=""
+        android:textColor="@color/color_wine"
         android:textSize="14sp" />
 
     <ImageView
