--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
+            android:layout_margin="9dp"
             android:background="@drawable/test_circle"
             android:gravity="center"
             android:text="TEST"
@@ -37,7 +37,7 @@
             android:layout_height="100dp"
             android:layout_below="@id/imageHeading"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -55,6 +55,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/batteryStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -105,6 +106,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/locationStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
