List takes location names

--- a/app/src/main/res/drawable/shaded_square.xml
+++ b/app/src/main/res/drawable/shaded_square.xml
@@ -6,6 +6,7 @@
     <size
         android:width="100dp"
         android:height="100dp" />
-    <solid android:color="@color/lightgray" />
+    <solid android:color="#fafafa" />
+    <corners android:radius="2dp"></corners>
 
 </shape>
