--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -9,7 +9,7 @@
         android:id="@+id/rel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_accent"
+        android:background="@color/white"
         android:orientation="vertical">
 
 
@@ -81,6 +81,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/lastTest"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
