--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/color_primary" />
+    <item android:drawable="@color/color_accent" />
 
     <item>
 
+
         <bitmap
-            android:gravity="center"
-            android:src="@drawable/flame_icon_large" />
+            android:gravity="fill_horizontal|fill_vertical"
+            android:src="@drawable/flame_icon_large"
+            android:tint="@color/iron" />
     </item>
 
 </layer-list>
