--- a/app/src/main/res/layout/overview_device_list_row.xml
+++ b/app/src/main/res/layout/overview_device_list_row.xml
@@ -32,6 +32,21 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:text=""
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/locationTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/statusCircle"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:text=""
+        android:textSize="18sp"
+        android:visibility="visible" />
+
 
 </RelativeLayout>
