--- a/app/src/main/res/layout/device_history_list_row.xml
+++ b/app/src/main/res/layout/device_history_list_row.xml
@@ -59,4 +59,11 @@
         android:layout_height="wrap_content"
         android:text=""
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:visibility="gone" />
 </RelativeLayout>
