--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="color_raisin">#2A1F2D</color>
     <color name="color_wine">#6A3937</color>
     <color name="color_sienna">#3B0D11</color>
+    <color name="color_gold">#F2BB05</color>
+    <color name="color_navy">#084C61</color>
 
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
