--- a/app/src/main/res/layout/device_history_list_row.xml
+++ b/app/src/main/res/layout/device_history_list_row.xml
@@ -15,8 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:paddingLeft="10sp"
-        android:paddingRight="10dp"
-        android:tint="@color/color_wine" />
+        android:paddingRight="10dp" />
 
 
     <TextView
