Toggles between test/hush

--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -12,30 +12,44 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-
-        <TextView
-            android:id="@+id/imageHeading"
+        <RelativeLayout
+            android:id="@+id/headingImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_margin="9dp"
-            android:background="@drawable/test_circle"
-            android:gravity="center"
-            android:text="TEST"
-            android:textColor="@color/color_primary"
-            android:textSize="24dp" />
+            android:gravity="center">
 
-        <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_below="@+id/imageHeading"-->
-        <!--android:background="@color/monsoon" />-->
+            <TextView
+                android:id="@+id/imageHeading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="9dp"
+                android:background="@drawable/test_circle"
+                android:gravity="center"
+                android:text="TEST"
+                android:textColor="@color/color_primary"
+                android:textSize="24dp"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/hushButtonHeading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="9dp"
+                android:background="@drawable/hush_circle"
+                android:gravity="center"
+                android:text="HUSH"
+                android:textColor="@color/color_wine"
+                android:textSize="24dp"
+                android:visibility="gone" />
+
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_below="@id/imageHeading"
+            android:layout_below="@id/headingImage"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="0dp"
             android:orientation="horizontal">
