Reorganized everything, removed unnecessary files

--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.v4.nate.smokedetect.LandingFragment">
+    tools:context="com.v4.nate.smokedetect.fragments.LandingFragment">
 
 
     <ImageButton
