--- a/app/src/main/res/layout/activity_database_push.xml
+++ b/app/src/main/res/layout/activity_database_push.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.v4.nate.smokedetect.DatabasePushActivity">
+    tools:context="com.v4.nate.smokedetect.activities.HushActivity">
 
 </android.support.constraint.ConstraintLayout>
