--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -4,7 +4,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.v4.nate.smokedetect.LandingActivity">
+    tools:context="com.v4.nate.smokedetect.activities.LandingActivity">
 
     <!--normal layout-->
 
