--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.v4.nate.smokedetect.DeviceInfoFragment">
+    tools:context="com.v4.nate.smokedetect.fragments.DeviceInfoFragment">
 
     <RelativeLayout
         android:id="@+id/rel"
