--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.v4.nate.smokedetect.WelcomeFragment">
+    tools:context="com.v4.nate.smokedetect.fragments.WelcomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
