--- a/app/src/main/res/layout/list_device_row.xml
+++ b/app/src/main/res/layout/list_device_row.xml
@@ -12,14 +12,16 @@
 
     <ImageView
         android:id="@+id/statusCircle"
-        android:layout_width="60dip"
-        android:layout_height="60dip"
+        android:layout_width="50dip"
+        android:layout_height="50dip"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:paddingLeft="10sp"
+        android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:src="@drawable/green_circle" />
+        android:src="@null" />
 
 
     <TextView
