Renamed a lot of drawables

--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="9dp"
-                android:background="@drawable/test_circle"
+                android:background="@drawable/circle_test_button"
                 android:gravity="center"
                 android:text="TEST"
                 android:textColor="@color/color_primary"
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="9dp"
-                android:background="@drawable/hush_circle"
+                android:background="@drawable/circle_hush_button"
                 android:gravity="center"
                 android:text="HUSH"
                 android:textColor="@color/color_wine"
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/shaded_square"
+                    android:background="@drawable/specification_back_square"
                     android:gravity="center"
                     android:text="Low"
                     android:textColor="@color/color_jet"
@@ -99,7 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/shaded_square"
+                    android:background="@drawable/specification_back_square"
                     android:gravity="center"
                     android:text="11/28"
                     android:textColor="@color/color_jet"
@@ -125,7 +125,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/shaded_square"
+                    android:background="@drawable/specification_back_square"
                     android:gravity="center"
                     android:text="Kitchen"
                     android:textColor="@color/color_jet"
