--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -19,7 +19,7 @@
         android:maxWidth="280dp"
         android:padding="3dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/green_flame" />
+        android:src="@drawable/flame_green" />
 
     <TextView
         android:id="@+id/detectorStatus"
