--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -20,7 +20,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/imageHeading"
+                android:id="@+id/testButtonHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="9dp"
