--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,13 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/color_accent" />
 
-    <item>
+    <item
+        android:drawable="@drawable/ic_flame_icon_small"
+        android:gravity="center_horizontal|center_vertical" />
 
-
-        <bitmap
-            android:gravity="fill_horizontal|fill_vertical"
-            android:src="@drawable/flame_icon_large"
-            android:tint="@color/iron" />
-    </item>
 
 </layer-list>
