--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
         <item name="colorControlNormal">@color/color_accent</item>
         <item name="colorControlActivated">@color/color_accent</item>
         <item name="colorControlHighlight">@color/color_accent</item>
-        <item name="android:textColorHint">@color/color_accent</item>
-        <item name="android:textColorPrimary">@color/color_accent</item>
+        <item name="android:textColorHint">@color/monsoon</item>
+        <item name="android:textColorPrimary">@color/monsoon</item>
         <item name="android:textColor">@color/monsoon</item>
 
         <item name="colorButtonNormal">@color/blue_grey_800</item>
