--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="colorControlNormal">@color/color_accent</item>
         <item name="colorControlActivated">@color/color_accent</item>
         <item name="colorControlHighlight">@color/color_accent</item>
-        <item name="android:textColorHint">@color/monsoon</item>
+        <item name="android:textColorHint">@color/iron</item>
         <item name="android:textColorPrimary">@color/monsoon</item>
         <item name="android:textColor">@color/monsoon</item>
 
